--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.3.1dev (2012-10-19)
+---------------------
+
+- added documentation for translating .mo during the unified installer setup
+  [sithmel]
+
 1.3 (2012-10-04)
 ----------------
 
