--- a/history.txt
+++ b/history.txt
@@ -7,6 +7,7 @@ Changelog
 - added documentation for translating .mo during the unified installer setup
   [sithmel]
 - fix Javascript bug on ie8 (updated kss.core) [sithmel]
+- updated windows unified installer doc [sithmel]
 
 1.3 (2012-10-04)
 ----------------
