--- a/history.txt
+++ b/history.txt
@@ -9,6 +9,7 @@ Changelog
 - fix Javascript bug on ie8 (updated kss.core) [sithmel]
 - updated windows unified installer doc [sithmel]
 - updated redomino.flowsearch to 0.12 [sithmel]
+- updated ploomcake.installer to 0.10 [sithmel]
 
 1.3 (2012-10-04)
 ----------------
