fixed ploomcake.installer and ploomcake.core. Still working on redomino.flowsearch

--- a/history.txt
+++ b/history.txt
@@ -9,7 +9,8 @@ Changelog
 - fix Javascript bug on ie8 (updated kss.core) [sithmel]
 - updated windows unified installer doc [sithmel]
 - updated redomino.flowsearch to 0.12 [sithmel]
-- updated ploomcake.installer to 0.10 [sithmel]
+- updated ploomcake.installer to 0.11 [sithmel]
+- updated ploomcake.core to 1.7 [sithmel]
 
 1.3 (2012-10-04)
 ----------------
