--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+1.4.0dev (unreleased)
+---------------------
+
+- updated redomino.css3theme from 1.5.8 to 1.5.10 [sithmel]
+- updated redomino.tabsandslides from 0.8.4 to 0.9.5 [sithmel]
+- plone 4.2 compatibility [sithmel]
+
 1.3.1dev (unreleased)
 ---------------------
 
