--- a/history.txt
+++ b/history.txt
@@ -5,8 +5,10 @@ Changelog
 ---------------------
 
 - updated redomino.css3theme from 1.5.8 to 1.5.10 [sithmel]
-- updated redomino.tabsandslides from 0.8.4 to 0.9.7 [sithmel]
+- updated redomino.tabsandslides from 0.8.4 to 0.9.9 [sithmel]
 - plone 4.2 compatibility [sithmel]
+- returned to the upstream release of PloneFormGen (1.7.6)
+  (giacomos patches have been merged) [sithmel]
 
 1.3.1dev (unreleased)
 ---------------------
