--- a/history.txt
+++ b/history.txt
@@ -1,8 +1,18 @@
 Changelog
 =========
 
-1.3.1dev (unreleased)
----------------------
+1.3.2 (2013-06-11)
+------------------
+
+- added PFG security patch (2013-06-11) [sithmel]
+- Products.PloneFormGen: back to upstream release 1.7.11
+  our patches got merged [sithmel]
+- Products.ContentwellPortlets: back to upstream release 4.2.1
+  our patches got merged [sithmel]
+
+
+1.3.1 (unreleased)
+------------------
 
 - added documentation and an utility script for translating .mo during the
   unified installer setup [sithmel]
